--- a/MadLibs/Base.lproj/MainMenu.xib
+++ b/MadLibs/Base.lproj/MainMenu.xib
@@ -683,37 +683,158 @@
         <window title="MadLibs" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="289" height="377"/>
+            <rect key="contentRect" x="335" y="390" width="289" height="325"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1440" height="877"/>
+            <value key="minSize" type="size" width="289" height="325"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="289" height="377"/>
+                <rect key="frame" x="0.0" y="0.0" width="289" height="325"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5DY-ko-QXm">
-                        <rect key="frame" x="158" y="335" width="111" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5DY-ko-QXm">
+                        <rect key="frame" x="158" y="283" width="111" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="111" id="4Rx-ol-Vtd"/>
+                        </constraints>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="P8K-Dj-hdz">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CIS-kU-WX1">
-                        <rect key="frame" x="18" y="338" width="102" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="CIS-kU-WX1">
+                        <rect key="frame" x="18" y="286" width="102" height="17"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Past Tense Verb" id="qFl-Pp-Ykx">
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W86-hB-Jtb">
+                        <rect key="frame" x="18" y="256" width="90" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Singular Noun" id="M4K-od-TPE">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <comboBox verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bAc-92-dnV">
+                        <rect key="frame" x="158" y="251" width="113" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="110" id="kKZ-3O-9cL"/>
+                        </constraints>
+                        <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" numberOfVisibleItems="5" id="mQ7-Bp-1I3">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            <objectValues>
+                                <string>Item 1</string>
+                                <string>Item 2</string>
+                                <string>Item 3</string>
+                            </objectValues>
+                        </comboBoxCell>
+                    </comboBox>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="tkF-aO-6cK">
+                        <rect key="frame" x="18" y="216" width="74" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Plural Noun" id="pnX-pr-ale">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xlJ-zu-nLS">
+                        <rect key="frame" x="156" y="211" width="116" height="26"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="111" id="Qca-In-hTI"/>
+                        </constraints>
+                        <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="ruE-FM-tB5" id="v1J-zO-AiP">
+                            <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="menu"/>
+                            <menu key="menu" id="WDI-0K-sNv">
+                                <items>
+                                    <menuItem title="Item 1" state="on" id="ruE-FM-tB5"/>
+                                    <menuItem title="Item 2" id="QfS-v1-7PK"/>
+                                    <menuItem title="Item 3" id="2Ms-1v-CMQ"/>
+                                </items>
+                            </menu>
+                        </popUpButtonCell>
+                    </popUpButton>
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="n7z-2T-wyT">
+                        <rect key="frame" x="18" y="166" width="46" height="17"/>
+                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Phrase" id="T8Z-TO-17a">
+                            <font key="font" metaFont="system"/>
+                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                        </textFieldCell>
+                    </textField>
+                    <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmK-JL-cF8">
+                        <rect key="frame" x="158" y="48" width="111" height="135"/>
+                        <clipView key="contentView" id="lbH-0K-eb0">
+                            <rect key="frame" x="1" y="1" width="109" height="133"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <subviews>
+                                <textView importsGraphics="NO" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="0iY-2E-Gyn">
+                                    <rect key="frame" x="0.0" y="0.0" width="109" height="133"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <size key="minSize" width="109" height="133"/>
+                                    <size key="maxSize" width="463" height="10000000"/>
+                                    <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                </textView>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </clipView>
+                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="YES" id="aMu-YP-oyp">
+                            <rect key="frame" x="-100" y="-100" width="87" height="18"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                        <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="SdQ-X8-QU3">
+                            <rect key="frame" x="94" y="1" width="16" height="133"/>
+                            <autoresizingMask key="autoresizingMask"/>
+                        </scroller>
+                    </scrollView>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Nhd-Ka-cwQ">
+                        <rect key="frame" x="213" y="13" width="62" height="32"/>
+                        <buttonCell key="cell" type="push" title="Go!" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NVU-oI-mf7">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="goButton:" target="xYo-O1-rlQ" id="yqX-uq-Fdb"/>
+                        </connections>
+                    </button>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="CIS-kU-WX1" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="0MO-y3-PZN"/>
+                    <constraint firstItem="CIS-kU-WX1" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="22" id="8aD-DX-mqF"/>
+                    <constraint firstAttribute="bottom" secondItem="Nhd-Ka-cwQ" secondAttribute="bottom" constant="20" id="IOI-1B-paB"/>
+                    <constraint firstItem="Nhd-Ka-cwQ" firstAttribute="top" secondItem="fmK-JL-cF8" secondAttribute="bottom" constant="7" id="IVk-fZ-BoU"/>
+                    <constraint firstAttribute="trailing" secondItem="Nhd-Ka-cwQ" secondAttribute="trailing" constant="20" id="J5c-RL-8VW"/>
+                    <constraint firstAttribute="trailing" secondItem="bAc-92-dnV" secondAttribute="trailing" constant="21" id="Lfx-2b-PWi"/>
+                    <constraint firstItem="W86-hB-Jtb" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="Mgz-Sc-OGV"/>
+                    <constraint firstAttribute="trailing" secondItem="fmK-JL-cF8" secondAttribute="trailing" constant="20" id="Mh8-pq-MDd"/>
+                    <constraint firstItem="tkF-aO-6cK" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="VzY-QG-2MF"/>
+                    <constraint firstItem="Nhd-Ka-cwQ" firstAttribute="top" secondItem="fmK-JL-cF8" secondAttribute="bottom" constant="7" id="Wox-Hk-vqa"/>
+                    <constraint firstItem="W86-hB-Jtb" firstAttribute="top" secondItem="CIS-kU-WX1" secondAttribute="bottom" constant="13" id="XNq-af-aDI"/>
+                    <constraint firstItem="xlJ-zu-nLS" firstAttribute="top" secondItem="bAc-92-dnV" secondAttribute="bottom" constant="20" id="XfJ-er-CGt"/>
+                    <constraint firstItem="tkF-aO-6cK" firstAttribute="top" secondItem="W86-hB-Jtb" secondAttribute="bottom" constant="23" id="Yan-2V-dXo"/>
+                    <constraint firstItem="fmK-JL-cF8" firstAttribute="leading" secondItem="n7z-2T-wyT" secondAttribute="trailing" constant="96" id="e64-zD-z2X"/>
+                    <constraint firstItem="fmK-JL-cF8" firstAttribute="top" secondItem="xlJ-zu-nLS" secondAttribute="bottom" constant="31" id="kOe-HM-ki5"/>
+                    <constraint firstAttribute="trailing" secondItem="5DY-ko-QXm" secondAttribute="trailing" constant="20" id="n5B-kK-R2O"/>
+                    <constraint firstItem="n7z-2T-wyT" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="20" id="ojn-wJ-2wd"/>
+                    <constraint firstAttribute="trailing" secondItem="xlJ-zu-nLS" secondAttribute="trailing" constant="20" id="pFZ-gV-Ase"/>
+                    <constraint firstItem="bAc-92-dnV" firstAttribute="top" secondItem="5DY-ko-QXm" secondAttribute="bottom" constant="8" id="pHV-f9-COT"/>
+                    <constraint firstItem="5DY-ko-QXm" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="20" id="pwX-5y-qk9"/>
+                    <constraint firstItem="n7z-2T-wyT" firstAttribute="top" secondItem="tkF-aO-6cK" secondAttribute="bottom" constant="33" id="xoz-V6-sO9"/>
+                </constraints>
             </view>
-            <point key="canvasLocation" x="43.5" y="-96.5"/>
+            <point key="canvasLocation" x="43.5" y="-98"/>
         </window>
         <viewController id="xYo-O1-rlQ" customClass="RootViewController" customModule="MadLibs" customModuleProvider="target">
             <connections>
                 <outlet property="pastTenseVerbTextField" destination="5DY-ko-QXm" id="fm5-mi-SCP"/>
+                <outlet property="phraseTextView" destination="0iY-2E-Gyn" id="6S4-Bf-OHi"/>
+                <outlet property="pluralNounPopup" destination="xlJ-zu-nLS" id="WOv-qH-ZNy"/>
+                <outlet property="singularNounCombo" destination="bAc-92-dnV" id="qiw-Me-MZM"/>
                 <outlet property="view" destination="EiT-Mj-1SZ" id="G4U-gh-S57"/>
             </connections>
         </viewController>
